Updated for new release