@@ -4,15 +4,22 @@ This is an OpenTripPlanner graph for planning trips, by car or public transport,
 
 The map shows bus and train routes included in the latest graph, giving a rough idea of the region included.
 
-You can [download the latest release of the Wales-ish OTP graph here](https://github.com/stupidpupil/wales_ish_otp_graph/releases/latest).
+## How to use this
 
-You can [see the scripts used to download source data and generate this graph here](https://github.com/stupidpupil/wales_ish_otp_graph). These depend enormously on the [UK2GTFS R package](https://itsleeds.github.io/UK2GTFS/) and the [Osmium tool](https://osmcode.org/osmium-tool/).
+[Download the latest release of the Wales-ish OTP graph here](https://github.com/stupidpupil/wales_ish_otp_graph/releases/latest). You’ll need to download both the *otp.jar* and *graph.obj* files and put them in same place.
+
+You can then start OpenTripPlanner with the following command:
+`java --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED -Xmx8g -jar otp.jar --load .` Eventually it’ll print “Started listener bound to \[0.0.0.0:8080\]” and you’ll be able to access the planner at `http://localhost:8080` .
+
+(You’ll need [Java 11 or later](https://adoptopenjdk.net/). See the [OTP documentation](http://docs.opentripplanner.org/en/latest/) for more information.)
 
 ## Update
 
-The graph file was last updated at 02:17 BST on 29 June 2021.
+The graph file was last updated at 03:22 BST on 30 June 2021.
 
 It was prepared using the following version of OpenTripPlanner - `2.1.0-SNAPSHOT, ser.ver.id: 8, commit: 6aebf2927b11be1f005c8db1041e66a2d8e884ec, branch: dev-2.x` - running on the following version of Java - `openjdk 11.0.11 2021-04-20`.
+
+You can [see the scripts used to download source data and generate this graph here](https://github.com/stupidpupil/wales_ish_otp_graph). These depend enormously on the [UK2GTFS R package](https://itsleeds.github.io/UK2GTFS/) and the [Osmium tool](https://osmcode.org/osmium-tool/).
 
 ## License
 
@@ -37,12 +44,12 @@ A small number of journeys, departing on the next Tuesday morning, are tested ev
 | Description               | Car   | Public |
 | :------------------------ | :---- | :----- |
 | Abergavenny to Pontypridd | 0h43m | 1h42m  |
-| Bala to Cardiff           | 3h52m | 5h23m  |
+| Bala to Cardiff           | 3h46m | 5h23m  |
 | Caerphilly to Cwmafan     | 0h48m | 1h42m  |
-| Cardiff to Bala           | 3h57m | 5h 6m  |
+| Cardiff to Bala           | 3h46m | 5h 6m  |
 | Cardiff to Sheffield      | N/A   | N/A    |
 | Cardigan to Trawsfynydd   | 3h 2m | 4h18m  |
-| Chirk to Walton           | 1h32m | 3h32m  |
+| Chirk to Walton           | 1h29m | 3h32m  |
 | Merthyr to Cardiff        | 0h46m | 1h11m  |
 | Swansea to Bargoed        | 1h13m | 2h11m  |
 | Swansea to Wrexham        | 3h42m | 4h32m  |
